<resources>
    <string name="app_name">PolyFlowFree</string>

    <string name="facile">Niveau facile</string>
    <string name="difficile">Niveau difficile</string>

    <string name="dim7">7x7</string>
    <string name="dim8">8x8</string>

    <string name="reinitialiser">Réinitialiser</string>
    <string name="quit">Quitter</string>
    <string name="annuler">Annuler</string>

    <string name="niveauLabel">Niveau: </string>
    <string name="nbConnexionsLabel">Tubes formées: </string>

    <string name="gagne">Partie gagnée!</string>

    <string name="facile1">Facile 1</string>
    <string name="facile2">Facile 2</string>
    <string name="facile3">Facile 3</string>

    <string name="difficile1">Difficile 1</string>
    <string name="difficile2">Difficile 2</string>
    <string name="difficile3">Difficile 3</string>

    <string name="prochain">Prochain niveau</string>
    <string name="prochainTexte">Sélectionnez un niveau</string>

    <string name="quitAlertTitle">Quitter le jeu</string>
    <string name="quitAlertText">Êtes-vous sûr de vouloir quitter le jeu? Votre progrès sera perdu.</string>

</resources>
