<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.polymtl.inf8405.inf8405tp1.ActiviteFinPartie">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facile1"
        android:id="@+id/facile1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="facile1Clique"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facile2"
        android:id="@+id/facile2"
        android:layout_below="@+id/facile1"
        android:layout_centerHorizontal="true"
        android:onClick="facile2Clique"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facile3"
        android:id="@+id/facile3"
        android:layout_below="@+id/facile2"
        android:layout_centerHorizontal="true"
        android:onClick="facile3Clique"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficile1"
        android:id="@+id/difficile1"
        android:layout_below="@+id/facile3"
        android:layout_centerHorizontal="true"
        android:onClick="difficile1Clique"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficile2"
        android:id="@+id/difficile2"
        android:layout_below="@+id/difficile1"
        android:layout_centerHorizontal="true"
        android:onClick="difficile2Clique"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficile3"
        android:id="@+id/difficile3"
        android:layout_below="@+id/difficile2"
        android:layout_centerHorizontal="true"
        android:onClick="difficile3Clique"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prochain"
        android:id="@+id/prochain"
        android:enabled="true"
        android:onClick="nextClique"
        android:layout_below="@+id/difficile3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/quit"
        android:enabled="true"
        android:onClick="quitterClique"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/difficile3"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
