<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.polymtl.inf8405.inf8405tp1.ActivitePageIntro">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facile"
        android:id="@+id/boutonFacile"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:onClick="facileClique" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficile"
        android:id="@+id/boutonDifficle"
        android:layout_below="@+id/boutonFacile"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:onClick="difficileClique" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/boutonQuitter"
        android:layout_below="@+id/boutonDifficle"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:onClick="quitterClique" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textNiveau"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
